<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/appBackground">


    <EditText
        android:id="@+id/caluation_Spce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/appBackground"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/calcu_space"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textDirection="rtl"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/result"
        android:textColor="@color/white"
        android:background="@color/appBackground"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caluation_Spce"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/nine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/nine"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/mode"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/eight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/eight"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/mode"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/three"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/three"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/six"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/six"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/seven"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/seven"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/zero"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/four"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/four"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/two"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/two"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/one"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/five"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/five"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/divide"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/divide"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/mode"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/mode"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.058" />

    <RelativeLayout
        android:layout_width="97dp"
        android:layout_height="389dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rounded_backgrounf"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="(-"
            android:background="@drawable/extra_btn_round"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="0dp"/>

        <Button
            android:id="@+id/multipple"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/multi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="85dp"
            app:layout_constraintVertical_bias="0.058" />

        <Button
            android:id="@+id/minus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="172dp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/plus"
            android:background="@drawable/rounded_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="255dp"/>

        <Button
            android:id="@+id/equals"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/equls"
            android:background="@drawable/extra_btn_round"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="320dp"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>